--- a/index.html
+++ b/index.html
@@ -266,6 +266,59 @@
     }, 2500); // 2.5 секунди
   });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  // 🔗 Підключення до Supabase
+  const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co"; // 👉 встав сюди свій URL
+  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE"; // 👉 встав сюди свій anon key
+  const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+
+  // 🎬 Завантаження фільмів із таблиці films_site
+  async function loadFilms() {
+    const { data: films, error } = await supabase
+      .from("films_site")
+      .select("id, title, genre, year, country, imdb, pro_access, stream_url, poster, description, type")
+      .order("id", { ascending: false })
+      .limit(20);
+
+    if (error) {
+      console.error("❌ Помилка завантаження:", error);
+      return;
+    }
+
+    const grid = document.querySelector(".film-grid");
+    if (!grid) return;
+    grid.innerHTML = "";
+
+    films.forEach(film => {
+      const card = document.createElement("div");
+      card.className = "film";
+
+      card.innerHTML = `
+        <div class="poster">
+          <img src="${film.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${film.title}">
+          ${film.pro_access ? '<span class="badge plus">PRO</span>' : ''}
+        </div>
+        <div class="title">${film.title}</div>
+        <div class="meta">
+          <span>${film.genre || ''}</span> • 
+          <span>${film.year || ''}</span> • 
+          <span>IMDb: ${film.imdb || '—'}</span>
+        </div>
+      `;
+
+      // 🔹 натискання по картці відкриє stream_url у плеєрі або новій вкладці
+      card.addEventListener("click", () => {
+        window.open(film.stream_url, "_blank");
+      });
+
+      grid.appendChild(card);
+    });
+  }
+
+  loadFilms();
+</script>
 
 </body>
 </html>
+
