--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
       // 🔹 натискання по картці відкриє stream_url у плеєрі або новій вкладці
       card.addEventListener("click", () => {
-        window.open(film.stream_url, "_blank");
+        window.location.href = `film.html?id=${film.id}`;
       });
 
       grid.appendChild(card);
@@ -321,5 +321,6 @@
 
 </body>
 </html>
+
 
 
