--- a/film.html
+++ b/film.html
@@ -157,7 +157,7 @@
   const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
 
-  // ✅ правильно — через window.supabase
+  // ✅ Правильне створення клієнта
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
   async function loadFilm() {
@@ -202,6 +202,5 @@
 
   loadFilm();
 </script>
-
 </body>
 </html>
