--- a/index.html
+++ b/index.html
@@ -265,16 +265,14 @@
       intro.style.display = "none";
     }, 2500); // 2.5 секунди
   });
-</script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
   // 🔗 Підключення до Supabase
   const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
 
-  // ✅ правильне створення клієнта
+  // ✅ Правильне створення клієнта
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
-
 
   // 🎬 Завантаження фільмів із таблиці films_site
   async function loadFilms() {
@@ -310,7 +308,7 @@
         </div>
       `;
 
-      // 🔹 натискання по картці відкриє stream_url у плеєрі або новій вкладці
+      // 🔹 Натискання відкриває сторінку film.html?id=...
       card.addEventListener("click", () => {
         window.location.href = `film.html?id=${film.id}`;
       });
@@ -322,8 +320,10 @@
   loadFilms();
 </script>
 
+
 </body>
 </html>
+
 
 
 
