--- a/film.html
+++ b/film.html
@@ -23,22 +23,23 @@
       max-width: 360px;
     }
 
-    /* 🖼️ Фото постера фільму (зменшене) */
+/* 🖼️ Фото постера фільму (на 5% більше) */
 .film-left img {
-  width: 90%;              /* було 100%, тепер трохи менше */
-  max-width: 260px;        /* обмежує максимально ширину */
+  width: 95%;              /* було 90%, тепер +5% */
+  max-width: 275px;        /* було 260px — теж трохи збільшили */
   border-radius: 10px;
   margin: 0 auto;
   display: block;
-  box-shadow: 0 0 20px rgba(0, 255, 255, 0.2);
+  box-shadow: 0 0 20px rgba(0, 255, 255, 0.25);
   border: 1px solid rgba(0, 255, 255, 0.25);
   transition: transform 0.3s ease;
 }
 
-/* ефект при наведенні */
+/* Ефект при наведенні */
 .film-left img:hover {
   transform: scale(1.05);
 }
+
 
 
     .film-meta {
