--- a/film.html
+++ b/film.html
@@ -1,107 +1,118 @@
 <!DOCTYPE html>
 <html lang="uk">
-<!-- === HEADER === -->
-<header>
-  <div class="container topbar">
-    <nav class="main-nav">
-      <img src="logo.png" alt="Relax Logo" class="nav-logo" />
-      <a href="#" class="active">Головна</a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Фільм — Relax Kino</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
-      <!-- Кнопка Фільми з випадаючим меню -->
-      <div class="dropdown">
-        <a href="#" class="menu-films">Фільми</a>
-        <div class="mega-menu">
-          <div class="genres">
-            <a href="#">Біографія</a>
-            <a href="#">Бойовик</a>
-            <a href="#">Вестерн</a>
-            <a href="#">Військовий</a>
-            <a href="#">Детектив</a>
-            <a href="#">Документальний</a>
-            <a href="#">Драма</a>
-            <a href="#">Історія</a>
-            <a href="#">Комедія</a>
-            <a href="#">Кримінал</a>
-            <a href="#">Мелодрама</a>
-            <a href="#">Містика</a>
-            <a href="#">Музика</a>
-            <a href="#">Мюзикл</a>
-            <a href="#">Пригоди</a>
-            <a href="#">Сімейний</a>
-            <a href="#">Спорт</a>
-            <a href="#">Трилер</a>
-            <a href="#">Жахи</a>
-            <a href="#">Фантастика</a>
-            <a href="#">Фентезі</a>
-            <a href="#">Короткометражні</a>
-            <a href="#">Субтитри</a>
-          </div>
-        </div>
-      </div>
-      <div class="dropdown">
-  <a href="#" class="menu-series">Серіали</a>
-  <div class="mega-menu mega-series">
-    <div class="genres">
-      <a href="#">Біографія</a>
-      <a href="#">Бойовик</a>
-      <a href="#">Вестерн</a>
-      <a href="#">Воєнний</a>
-      <a href="#">Детектив</a>
-      <a href="#">Документальний</a>
-      <a href="#">Драма</a>
-      <a href="#">Історія</a>
-      <a href="#">Комедія</a>
-      <a href="#">Кримінал</a>
-      <a href="#">Мелодрама</a>
-      <a href="#">Містика</a>
-      <a href="#">Пригоди</a>
-      <a href="#">Спорт</a>
-      <a href="#">Трилер</a>
-      <a href="#">Жахи</a>
-      <a href="#">Фантастика</a>
-      <a href="#">Фентезі</a>
-      <a href="#">Дорама</a>
-      <a href="#">Субтитри</a>
-      <a href="#">Міні-серіал</a>
-    </div>
-  </div>
-</div>
+  <style>
+    /* === СТИЛЬ ДЛЯ СТОРІНКИ ФІЛЬМУ === */
+    .film-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+      margin-top: 40px;
+      align-items: flex-start;
+    }
 
-      <!-- === МУЛЬТФІЛЬМИ === -->
-<div class="dropdown">
-  <a href="#" class="menu-cartoons">Мультфільми</a>
-  <div class="mega-menu mega-cartoons">
-    <div class="genres">
-      <a href="#">Всі мультики</a>
-      <a href="#">Повнометражні</a>
-      <a href="#">Короткометражні</a>
-      <a href="#">Мультсеріали</a>
-      <a href="#">Відомі мультсеріали</a>
-      <a href="#">Студії</a>
-      <a href="#">Netflix</a>
-      <a href="#">DreamWorks</a>
-      <a href="#">Pixar</a>
-      <a href="#">WB: Анімація</a>
-      <a href="#">Теми</a>
-      <a href="#">Для дорослих</a>
-      <a href="#">Про роботів</a>
-      <a href="#">Пластилінова анімація</a>
-      <a href="#">Новорічні</a>
-    </div>
-  </div>
-</div>
+    .film-left {
+      flex: 1;
+      min-width: 300px;
+      max-width: 360px;
+    }
 
-      <a href="#">Новинки</a>
-      <a href="#">Збірки фільмів</a>
-    </nav>
+/* 🖼️ Фото постера фільму (на 5% більше) */
+.film-left img {
+  width: 95%;              /* було 90%, тепер +5% */
+  max-width: 275px;        /* було 260px — теж трохи збільшили */
+  border-radius: 10px;
+  margin: 0 auto;
+  display: block;
+  box-shadow: 0 0 20px rgba(0, 255, 255, 0.25);
+  border: 1px solid rgba(0, 255, 255, 0.25);
+  transition: transform 0.3s ease;
+}
 
-    <!-- Пошук + Мій кабінет -->
-    <div class="top-right">
-      <input type="text" placeholder="Пошук…" class="search" />
-      <button class="profile-btn">👑 Мій кабінет</button>
-    </div>
-  </div>
-</header>
+/* Ефект при наведенні */
+.film-left img:hover {
+  transform: scale(1.05);
+}
+
+
+
+/* 🎬 Лівий блок без фону, але з окремими підсвіченими рядками */
+.film-meta {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;              /* трохи більше відстані між рядками */
+  margin-top: 12px;
+  background: none;      /* прибрали підсвітку усього блоку */
+  box-shadow: none;
+  border: none;
+}
+
+
+    .film-meta span {
+      display: block;
+      color: #bbb;
+      margin: 4px 0;
+      font-size: 15px;
+      line-height: 1.4;
+    }
+
+    .film-meta b {
+      color: #00fff2;
+    }
+
+    .film-right {
+      flex: 2;
+      min-width: 400px;
+    }
+
+    .film-title {
+      font-size: 28px;
+      color: #00fff2;
+      text-shadow: 0 0 18px #00fff2a0;
+      margin-bottom: 15px;
+      font-weight: 700;
+    }
+
+    .player-box {
+      position: relative;
+      background: #000;
+      border-radius: 12px;
+      border: 1px solid rgba(0,255,242,0.3);
+      overflow: hidden;
+      box-shadow: 0 0 30px rgba(0,255,242,0.15);
+    }
+
+    video {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 12px;
+      aspect-ratio: 16/9;
+    }
+
+    .film-description {
+      margin-top: 25px;
+      background: #1a1a1a;
+      border-radius: 12px;
+      border: 1px solid rgba(0,255,242,0.2);
+      box-shadow: 0 0 30px rgba(0,255,242,0.1);
+      padding: 20px 24px;
+      color: #ddd;
+      font-size: 16px;
+      line-height: 1.7;
+    }
+
+    footer {
+      margin-top: 80px;
+    }
+  </style>
+</head>
 <body>
 
 <!-- === HEADER === -->
@@ -208,13 +219,6 @@
   }
 
   loadFilm();
-</script>
-<script>
-  function scrollSlider(direction) {
-    const slider = document.getElementById("sliderRow");
-    const scrollAmount = 300;
-    slider.scrollBy({ left: scrollAmount * direction, behavior: "smooth" });
-  }
 </script>
 </body>
 </html>
