--- a/film.html
+++ b/film.html
@@ -114,23 +114,100 @@
   </style>
 </head>
 <body>
-
-<!-- === HEADER === -->
+<!-- === HEADER (ідентичний index.html) === -->
 <header>
   <div class="container topbar">
     <nav class="main-nav">
       <img src="logo.png" alt="Relax Logo" class="nav-logo" />
-      <a href="index.html">Головна</a>
-      <a href="#" class="active">Фільми</a>
-      <a href="#">Серіали</a>
-      <a href="#">Мультфільми</a>
+      <a href="index.html" class="active">Головна</a>
+
+      <!-- Кнопка Фільми з випадаючим меню -->
+      <div class="dropdown">
+        <a href="#" class="menu-films">Фільми</a>
+        <div class="mega-menu">
+          <div class="genres">
+            <a href="#">Біографія</a>
+            <a href="#">Бойовик</a>
+            <a href="#">Вестерн</a>
+            <a href="#">Військовий</a>
+            <a href="#">Детектив</a>
+            <a href="#">Документальний</a>
+            <a href="#">Драма</a>
+            <a href="#">Історія</a>
+            <a href="#">Комедія</a>
+            <a href="#">Кримінал</a>
+            <a href="#">Мелодрама</a>
+            <a href="#">Містика</a>
+            <a href="#">Музика</a>
+            <a href="#">Мюзикл</a>
+            <a href="#">Пригоди</a>
+            <a href="#">Сімейний</a>
+            <a href="#">Спорт</a>
+            <a href="#">Трилер</a>
+            <a href="#">Жахи</a>
+            <a href="#">Фантастика</a>
+            <a href="#">Фентезі</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Серіали -->
+      <div class="dropdown">
+        <a href="#" class="menu-series">Серіали</a>
+        <div class="mega-menu">
+          <div class="genres">
+            <a href="#">Бойовик</a>
+            <a href="#">Драма</a>
+            <a href="#">Комедія</a>
+            <a href="#">Мелодрама</a>
+            <a href="#">Детектив</a>
+            <a href="#">Фантастика</a>
+            <a href="#">Жахи</a>
+            <a href="#">Історія</a>
+            <a href="#">Трилер</a>
+            <a href="#">Кримінал</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Мультфільми -->
+      <div class="dropdown">
+        <a href="#" class="menu-cartoons">Мультфільми</a>
+        <div class="mega-menu">
+          <div class="genres">
+            <a href="#">Повнометражні</a>
+            <a href="#">Мультсеріали</a>
+            <a href="#">Для дітей</a>
+            <a href="#">Disney</a>
+            <a href="#">DreamWorks</a>
+            <a href="#">Pixar</a>
+          </div>
+        </div>
+      </div>
+
+      <a href="#">Новинки</a>
+      <a href="#">Збірки</a>
     </nav>
+
     <div class="top-right">
       <input type="text" placeholder="Пошук…" class="search" />
       <button class="profile-btn">👑 Мій кабінет</button>
     </div>
   </div>
 </header>
+<!-- === BANNER === -->
+<section class="banner-slider">
+  <h2>🔥 Топ 10 фільмів</h2>
+  <button class="slider-btn left" onclick="scrollSlider(-1)">❮</button>
+  <button class="slider-btn right" onclick="scrollSlider(1)">❯</button>
+  <div class="slider-row" id="sliderRow">
+    <div class="slide"><img src="https://i.postimg.cc/VLHxgJsg/dragon.jpg"><p>Дракон Раджа</p></div>
+    <div class="slide"><img src="https://i.postimg.cc/V6z1QntN/anemone.jpg"><p>Анемона</p></div>
+    <div class="slide"><img src="https://i.postimg.cc/mkzLz6nK/enigma.jpg"><p>Енігма</p></div>
+    <div class="slide"><img src="https://i.postimg.cc/VvY5YBgJ/afterburn.jpg"><p>Afterburn</p></div>
+  </div>
+</section>
+
 
 <!-- === MAIN === -->
 <main>
@@ -220,5 +297,13 @@
 
   loadFilm();
 </script>
+<script>
+  function scrollSlider(direction) {
+    const slider = document.getElementById("sliderRow");
+    const scrollAmount = 300;
+    slider.scrollBy({ left: scrollAmount * direction, behavior: "smooth" });
+  }
+</script>
+
 </body>
 </html>
