--- a/film.html
+++ b/film.html
@@ -114,70 +114,52 @@
   </style>
 </head>
 <body>
-<!-- === HEADER (ідентичний index.html) === -->
 <header>
   <div class="container topbar">
     <nav class="main-nav">
       <img src="logo.png" alt="Relax Logo" class="nav-logo" />
       <a href="index.html" class="active">Головна</a>
 
-      <!-- Кнопка Фільми з випадаючим меню -->
       <div class="dropdown">
         <a href="#" class="menu-films">Фільми</a>
         <div class="mega-menu">
           <div class="genres">
             <a href="#">Біографія</a>
             <a href="#">Бойовик</a>
-            <a href="#">Вестерн</a>
-            <a href="#">Військовий</a>
-            <a href="#">Детектив</a>
-            <a href="#">Документальний</a>
             <a href="#">Драма</a>
-            <a href="#">Історія</a>
-            <a href="#">Комедія</a>
-            <a href="#">Кримінал</a>
-            <a href="#">Мелодрама</a>
-            <a href="#">Містика</a>
-            <a href="#">Музика</a>
-            <a href="#">Мюзикл</a>
-            <a href="#">Пригоди</a>
-            <a href="#">Сімейний</a>
-            <a href="#">Спорт</a>
             <a href="#">Трилер</a>
-            <a href="#">Жахи</a>
             <a href="#">Фантастика</a>
             <a href="#">Фентезі</a>
+            <a href="#">Комедія</a>
+            <a href="#">Кримінал</a>
+            <a href="#">Документальний</a>
+            <a href="#">Жахи</a>
+            <a href="#">Мелодрама</a>
+            <a href="#">Пригоди</a>
           </div>
         </div>
       </div>
 
-      <!-- Серіали -->
       <div class="dropdown">
         <a href="#" class="menu-series">Серіали</a>
-        <div class="mega-menu">
+        <div class="mega-menu mega-series">
           <div class="genres">
             <a href="#">Бойовик</a>
             <a href="#">Драма</a>
             <a href="#">Комедія</a>
-            <a href="#">Мелодрама</a>
-            <a href="#">Детектив</a>
+            <a href="#">Історія</a>
             <a href="#">Фантастика</a>
             <a href="#">Жахи</a>
-            <a href="#">Історія</a>
-            <a href="#">Трилер</a>
-            <a href="#">Кримінал</a>
           </div>
         </div>
       </div>
 
-      <!-- Мультфільми -->
       <div class="dropdown">
         <a href="#" class="menu-cartoons">Мультфільми</a>
-        <div class="mega-menu">
+        <div class="mega-menu mega-cartoons">
           <div class="genres">
-            <a href="#">Повнометражні</a>
-            <a href="#">Мультсеріали</a>
             <a href="#">Для дітей</a>
+            <a href="#">Повнометражні</a>
             <a href="#">Disney</a>
             <a href="#">DreamWorks</a>
             <a href="#">Pixar</a>
@@ -186,7 +168,7 @@
       </div>
 
       <a href="#">Новинки</a>
-      <a href="#">Збірки</a>
+      <a href="#">Збірки фільмів</a>
     </nav>
 
     <div class="top-right">
@@ -195,6 +177,7 @@
     </div>
   </div>
 </header>
+
 <!-- === BANNER === -->
 <section class="banner-slider">
   <h2>🔥 Топ 10 фільмів</h2>
@@ -207,6 +190,7 @@
     <div class="slide"><img src="https://i.postimg.cc/VvY5YBgJ/afterburn.jpg"><p>Afterburn</p></div>
   </div>
 </section>
+
 
 
 <!-- === MAIN === -->
