--- a/film.html
+++ b/film.html
@@ -118,51 +118,50 @@
   <div class="container topbar">
     <nav class="main-nav">
       <img src="logo.png" alt="Relax Logo" class="nav-logo" />
-      <a href="index.html" class="active">Головна</a>
+      <a href="index.html">Головна</a>
 
+      <!-- ФІЛЬМИ -->
       <div class="dropdown">
         <a href="#" class="menu-films">Фільми</a>
         <div class="mega-menu">
           <div class="genres">
-            <a href="#">Біографія</a>
-            <a href="#">Бойовик</a>
-            <a href="#">Драма</a>
-            <a href="#">Трилер</a>
-            <a href="#">Фантастика</a>
-            <a href="#">Фентезі</a>
-            <a href="#">Комедія</a>
-            <a href="#">Кримінал</a>
-            <a href="#">Документальний</a>
-            <a href="#">Жахи</a>
-            <a href="#">Мелодрама</a>
-            <a href="#">Пригоди</a>
+            <a href="#">Біографія</a><a href="#">Бойовик</a><a href="#">Вестерн</a>
+            <a href="#">Військовий</a><a href="#">Детектив</a><a href="#">Документальний</a>
+            <a href="#">Драма</a><a href="#">Історія</a><a href="#">Комедія</a>
+            <a href="#">Кримінал</a><a href="#">Мелодрама</a><a href="#">Містика</a>
+            <a href="#">Музика</a><a href="#">Мюзикл</a><a href="#">Пригоди</a>
+            <a href="#">Сімейний</a><a href="#">Спорт</a><a href="#">Трилер</a>
+            <a href="#">Жахи</a><a href="#">Фантастика</a><a href="#">Фентезі</a>
+            <a href="#">Короткометражні</a><a href="#">Субтитри</a>
           </div>
         </div>
       </div>
 
+      <!-- СЕРІАЛИ -->
       <div class="dropdown">
         <a href="#" class="menu-series">Серіали</a>
         <div class="mega-menu mega-series">
           <div class="genres">
-            <a href="#">Бойовик</a>
-            <a href="#">Драма</a>
-            <a href="#">Комедія</a>
-            <a href="#">Історія</a>
-            <a href="#">Фантастика</a>
-            <a href="#">Жахи</a>
+            <a href="#">Біографія</a><a href="#">Бойовик</a><a href="#">Вестерн</a>
+            <a href="#">Воєнний</a><a href="#">Детектив</a><a href="#">Документальний</a>
+            <a href="#">Драма</a><a href="#">Історія</a><a href="#">Комедія</a>
+            <a href="#">Кримінал</a><a href="#">Мелодрама</a><a href="#">Містика</a>
+            <a href="#">Пригоди</a><a href="#">Спорт</a><a href="#">Трилер</a>
+            <a href="#">Жахи</a><a href="#">Фантастика</a><a href="#">Фентезі</a>
+            <a href="#">Дорама</a><a href="#">Субтитри</a><a href="#">Міні-серіал</a>
           </div>
         </div>
       </div>
 
+      <!-- МУЛЬТФІЛЬМИ -->
       <div class="dropdown">
         <a href="#" class="menu-cartoons">Мультфільми</a>
         <div class="mega-menu mega-cartoons">
           <div class="genres">
-            <a href="#">Для дітей</a>
-            <a href="#">Повнометражні</a>
-            <a href="#">Disney</a>
-            <a href="#">DreamWorks</a>
-            <a href="#">Pixar</a>
+            <a href="#">Всі мультики</a><a href="#">Повнометражні</a>
+            <a href="#">Короткометражні</a><a href="#">Мультсеріали</a>
+            <a href="#">Netflix</a><a href="#">DreamWorks</a><a href="#">Pixar</a>
+            <a href="#">WB: Анімація</a><a href="#">Для дорослих</a>
           </div>
         </div>
       </div>
@@ -177,6 +176,20 @@
     </div>
   </div>
 </header>
+<div class="container">
+  <section class="banner-slider">
+    <h2>🔥 Топ 10 фільмів</h2>
+    <button class="slider-btn left" onclick="scrollSlider(-1)">❮</button>
+    <button class="slider-btn right" onclick="scrollSlider(1)">❯</button>
+    <div class="slider-row" id="sliderRow">
+      <div class="slide"><img src="https://i.postimg.cc/VLHxgJsg/dragon.jpg"><p>Дракон Раджа</p></div>
+      <div class="slide"><img src="https://i.postimg.cc/V6z1QntN/anemone.jpg"><p>Анемона</p></div>
+      <div class="slide"><img src="https://i.postimg.cc/mkzLz6nK/enigma.jpg"><p>Енігма</p></div>
+      <div class="slide"><img src="https://i.postimg.cc/VvY5YBgJ/afterburn.jpg"><p>Afterburn</p></div>
+    </div>
+  </section>
+</div>
+
 
 <!-- === BANNER === -->
 <section class="banner-slider">
@@ -288,6 +301,7 @@
     slider.scrollBy({ left: scrollAmount * direction, behavior: "smooth" });
   }
 </script>
+
 
 </body>
 </html>
