--- a/film.html
+++ b/film.html
@@ -3,293 +3,160 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Фільм — Relax Kino</title>
+  <title>Фільм | KinoSite</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-
-  <style>
-    /* === СТИЛЬ ДЛЯ СТОРІНКИ ФІЛЬМУ === */
-    .film-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-top: 40px;
-      align-items: flex-start;
-    }
-
-    .film-left {
-      flex: 1;
-      min-width: 300px;
-      max-width: 360px;
-    }
-
-/* 🖼️ Фото постера фільму (на 5% більше) */
-.film-left img {
-  width: 95%;              /* було 90%, тепер +5% */
-  max-width: 275px;        /* було 260px — теж трохи збільшили */
-  border-radius: 10px;
-  margin: 0 auto;
-  display: block;
-  box-shadow: 0 0 20px rgba(0, 255, 255, 0.25);
-  border: 1px solid rgba(0, 255, 255, 0.25);
-  transition: transform 0.3s ease;
-}
-
-/* Ефект при наведенні */
-.film-left img:hover {
-  transform: scale(1.05);
-}
-
-
-
-/* 🎬 Лівий блок без фону, але з окремими підсвіченими рядками */
-.film-meta {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;              /* трохи більше відстані між рядками */
-  margin-top: 12px;
-  background: none;      /* прибрали підсвітку усього блоку */
-  box-shadow: none;
-  border: none;
-}
-
-
-    .film-meta span {
-      display: block;
-      color: #bbb;
-      margin: 4px 0;
-      font-size: 15px;
-      line-height: 1.4;
-    }
-
-    .film-meta b {
-      color: #00fff2;
-    }
-
-    .film-right {
-      flex: 2;
-      min-width: 400px;
-    }
-
-    .film-title {
-      font-size: 28px;
-      color: #00fff2;
-      text-shadow: 0 0 18px #00fff2a0;
-      margin-bottom: 15px;
-      font-weight: 700;
-    }
-
-    .player-box {
-      position: relative;
-      background: #000;
-      border-radius: 12px;
-      border: 1px solid rgba(0,255,242,0.3);
-      overflow: hidden;
-      box-shadow: 0 0 30px rgba(0,255,242,0.15);
-    }
-
-    video {
-      width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 12px;
-      aspect-ratio: 16/9;
-    }
-
-    .film-description {
-      margin-top: 25px;
-      background: #1a1a1a;
-      border-radius: 12px;
-      border: 1px solid rgba(0,255,242,0.2);
-      box-shadow: 0 0 30px rgba(0,255,242,0.1);
-      padding: 20px 24px;
-      color: #ddd;
-      font-size: 16px;
-      line-height: 1.7;
-    }
-
-    footer {
-      margin-top: 80px;
-    }
-  </style>
 </head>
+
 <body>
-<header>
-  <div class="container topbar">
-    <nav class="main-nav">
-      <img src="logo.png" alt="Relax Logo" class="nav-logo" />
-      <a href="index.html">Головна</a>
 
-      <!-- ФІЛЬМИ -->
-      <div class="dropdown">
-        <a href="#" class="menu-films">Фільми</a>
-        <div class="mega-menu">
-          <div class="genres">
-            <a href="#">Біографія</a><a href="#">Бойовик</a><a href="#">Вестерн</a>
-            <a href="#">Військовий</a><a href="#">Детектив</a><a href="#">Документальний</a>
-            <a href="#">Драма</a><a href="#">Історія</a><a href="#">Комедія</a>
-            <a href="#">Кримінал</a><a href="#">Мелодрама</a><a href="#">Містика</a>
-            <a href="#">Музика</a><a href="#">Мюзикл</a><a href="#">Пригоди</a>
-            <a href="#">Сімейний</a><a href="#">Спорт</a><a href="#">Трилер</a>
-            <a href="#">Жахи</a><a href="#">Фантастика</a><a href="#">Фентезі</a>
-            <a href="#">Короткометражні</a><a href="#">Субтитри</a>
+  <!-- === HEADER (ідентичний index.html) === -->
+  <header>
+    <div class="container topbar">
+      <nav class="main-nav">
+        <img src="logo.png" alt="Relax Logo" class="nav-logo" />
+        <a href="index.html">Головна</a>
+
+        <!-- ФІЛЬМИ -->
+        <div class="dropdown">
+          <a href="#" class="menu-films">Фільми</a>
+          <div class="mega-menu">
+            <div class="genres">
+              <a href="#">Біографія</a><a href="#">Бойовик</a><a href="#">Вестерн</a>
+              <a href="#">Військовий</a><a href="#">Детектив</a><a href="#">Документальний</a>
+              <a href="#">Драма</a><a href="#">Історія</a><a href="#">Комедія</a>
+              <a href="#">Кримінал</a><a href="#">Мелодрама</a><a href="#">Містика</a>
+              <a href="#">Музика</a><a href="#">Мюзикл</a><a href="#">Пригоди</a>
+              <a href="#">Сімейний</a><a href="#">Спорт</a><a href="#">Трилер</a>
+              <a href="#">Жахи</a><a href="#">Фантастика</a><a href="#">Фентезі</a>
+              <a href="#">Короткометражні</a><a href="#">Субтитри</a>
+            </div>
           </div>
+        </div>
+
+        <!-- СЕРІАЛИ -->
+        <div class="dropdown">
+          <a href="#" class="menu-series">Серіали</a>
+          <div class="mega-menu mega-series">
+            <div class="genres">
+              <a href="#">Біографія</a><a href="#">Бойовик</a><a href="#">Вестерн</a>
+              <a href="#">Воєнний</a><a href="#">Детектив</a><a href="#">Документальний</a>
+              <a href="#">Драма</a><a href="#">Історія</a><a href="#">Комедія</a>
+              <a href="#">Кримінал</a><a href="#">Мелодрама</a><a href="#">Містика</a>
+              <a href="#">Пригоди</a><a href="#">Спорт</a><a href="#">Трилер</a>
+              <a href="#">Жахи</a><a href="#">Фантастика</a><a href="#">Фентезі</a>
+              <a href="#">Дорама</a><a href="#">Субтитри</a><a href="#">Міні-серіал</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- МУЛЬТФІЛЬМИ -->
+        <div class="dropdown">
+          <a href="#" class="menu-cartoons">Мультфільми</a>
+          <div class="mega-menu mega-cartoons">
+            <div class="genres">
+              <a href="#">Всі мультики</a><a href="#">Повнометражні</a>
+              <a href="#">Короткометражні</a><a href="#">Мультсеріали</a>
+              <a href="#">Netflix</a><a href="#">DreamWorks</a><a href="#">Pixar</a>
+              <a href="#">WB: Анімація</a><a href="#">Для дорослих</a>
+            </div>
+          </div>
+        </div>
+
+        <a href="#">Новинки</a>
+        <a href="#">Збірки фільмів</a>
+      </nav>
+
+      <div class="top-right">
+        <input type="text" placeholder="Пошук…" class="search" />
+        <button class="profile-btn">👑 Мій кабінет</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- === BANNER === -->
+  <div class="container">
+    <section class="banner-slider">
+      <h2>🔥 Топ 10 фільмів</h2>
+      <button class="slider-btn left" onclick="scrollSlider(-1)">❮</button>
+      <button class="slider-btn right" onclick="scrollSlider(1)">❯</button>
+      <div class="slider-row" id="sliderRow">
+        <div class="slide"><img src="https://i.postimg.cc/VLHxgJsg/dragon.jpg"><p>Дракон Раджа</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/V6z1QntN/anemone.jpg"><p>Анемона</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/mkzLz6nK/enigma.jpg"><p>Енігма</p></div>
+        <div class="slide"><img src="https://i.postimg.cc/VvY5YBgJ/afterburn.jpg"><p>Afterburn</p></div>
+      </div>
+    </section>
+  </div>
+
+  <!-- === ОСНОВНИЙ КОНТЕНТ === -->
+  <main>
+    <div class="container film-container">
+      <div class="film-left">
+        <img id="filmPoster" src="" alt="Постер">
+        <div class="film-meta">
+          <span><b>Рік:</b> <span id="filmYear"></span></span>
+          <span><b>Жанр:</b> <span id="filmGenre"></span></span>
+          <span><b>Країна:</b> <span id="filmCountry"></span></span>
+          <span><b>Режисер:</b> <span id="filmDirector"></span></span>
+          <span><b>В ролях:</b> <span id="filmCast"></span></span>
+          <span><b>Звук:</b> <span id="filmSound"></span></span>
+          <span><b>Тривалість:</b> <span id="filmDuration"></span></span>
+          <span><b>Вік:</b> <span id="filmAge"></span></span>
+          <span><b>IMDb:</b> <span id="filmImdb"></span></span>
         </div>
       </div>
 
-      <!-- СЕРІАЛИ -->
-      <div class="dropdown">
-        <a href="#" class="menu-series">Серіали</a>
-        <div class="mega-menu mega-series">
-          <div class="genres">
-            <a href="#">Біографія</a><a href="#">Бойовик</a><a href="#">Вестерн</a>
-            <a href="#">Воєнний</a><a href="#">Детектив</a><a href="#">Документальний</a>
-            <a href="#">Драма</a><a href="#">Історія</a><a href="#">Комедія</a>
-            <a href="#">Кримінал</a><a href="#">Мелодрама</a><a href="#">Містика</a>
-            <a href="#">Пригоди</a><a href="#">Спорт</a><a href="#">Трилер</a>
-            <a href="#">Жахи</a><a href="#">Фантастика</a><a href="#">Фентезі</a>
-            <a href="#">Дорама</a><a href="#">Субтитри</a><a href="#">Міні-серіал</a>
-          </div>
+      <div class="film-center">
+        <video id="filmPlayer" controls autoplay playsinline muted></video>
+        <div class="film-description">
+          <h3>Про що фільм</h3>
+          <p id="filmDescription"></p>
         </div>
       </div>
-
-      <!-- МУЛЬТФІЛЬМИ -->
-      <div class="dropdown">
-        <a href="#" class="menu-cartoons">Мультфільми</a>
-        <div class="mega-menu mega-cartoons">
-          <div class="genres">
-            <a href="#">Всі мультики</a><a href="#">Повнометражні</a>
-            <a href="#">Короткометражні</a><a href="#">Мультсеріали</a>
-            <a href="#">Netflix</a><a href="#">DreamWorks</a><a href="#">Pixar</a>
-            <a href="#">WB: Анімація</a><a href="#">Для дорослих</a>
-          </div>
-        </div>
-      </div>
-
-      <a href="#">Новинки</a>
-      <a href="#">Збірки фільмів</a>
-    </nav>
-
-    <div class="top-right">
-      <input type="text" placeholder="Пошук…" class="search" />
-      <button class="profile-btn">👑 Мій кабінет</button>
     </div>
-  </div>
-</header>
+  </main>
 
+  <!-- === SCRIPTS === -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
+    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
+    async function loadFilm() {
+      const params = new URLSearchParams(window.location.search);
+      const filmId = params.get("id");
+      if (!filmId) return;
 
-<!-- === BANNER === -->
-<section class="banner-slider">
-  <h2>🔥 Топ 10 фільмів</h2>
-  <button class="slider-btn left" onclick="scrollSlider(-1)">❮</button>
-  <button class="slider-btn right" onclick="scrollSlider(1)">❯</button>
-  <div class="slider-row" id="sliderRow">
-    <div class="slide"><img src="https://i.postimg.cc/VLHxgJsg/dragon.jpg"><p>Дракон Раджа</p></div>
-    <div class="slide"><img src="https://i.postimg.cc/V6z1QntN/anemone.jpg"><p>Анемона</p></div>
-    <div class="slide"><img src="https://i.postimg.cc/mkzLz6nK/enigma.jpg"><p>Енігма</p></div>
-    <div class="slide"><img src="https://i.postimg.cc/VvY5YBgJ/afterburn.jpg"><p>Afterburn</p></div>
-  </div>
-</section>
+      const { data, error } = await supabase
+        .from("films")
+        .select("*")
+        .eq("id", filmId)
+        .single();
 
+      if (error || !data) return;
 
-
-<!-- === MAIN === -->
-<main>
-  <div class="container film-container">
-    <div class="film-left">
-      <img id="filmPoster" src="" alt="Постер">
-      <div class="film-meta">
-        <span><b>Рік:</b> <span id="filmYear"></span></span>
-        <span><b>Жанр:</b> <span id="filmGenre"></span></span>
-        <span><b>Країна:</b> <span id="filmCountry"></span></span>
-        <span><b>Режисер:</b> <span id="filmDirector"></span></span>
-        <span><b>В ролях:</b> <span id="filmCast"></span></span>
-        <span><b>Звук:</b> <span id="filmSound"></span></span>
-        <span><b>Тривалість:</b> <span id="filmDuration"></span></span>
-        <span><b>Вік:</b> <span id="filmAge"></span></span>
-        <span><b>IMDb:</b> <span id="filmImdb"></span></span>
-      </div>
-    </div>
-
-    <div class="film-right">
-      <div class="film-title" id="filmTitle">Назва фільму</div>
-      <div class="player-box">
-        <video id="filmPlayer" controls autoplay muted playsinline></video>
-      </div>
-      <div class="film-description">
-        <h3>Про що фільм:</h3>
-        <p id="filmDesc">Опис фільму...</p>
-      </div>
-    </div>
-  </div>
-</main>
-
-<!-- === FOOTER === -->
-<footer>
-  © 2025 KinoSite • Усі права захищені
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-  const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
-  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
-
-  // ✅ Правильне створення клієнта
-  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
-
-  async function loadFilm() {
-    const params = new URLSearchParams(window.location.search);
-    const id = params.get("id");
-    if (!id) return;
-
-    const { data, error } = await supabase
-      .from("films_site")
-      .select("*")
-      .eq("id", id)
-      .single();
-
-    if (error) {
-      console.error("❌ Помилка Supabase:", error.message);
-      document.getElementById("filmTitle").textContent = "Помилка завантаження";
-      return;
+      document.getElementById("filmPoster").src = data.poster || "";
+      document.getElementById("filmYear").textContent = data.year || "";
+      document.getElementById("filmGenre").textContent = data.genre || "";
+      document.getElementById("filmCountry").textContent = data.country || "";
+      document.getElementById("filmDirector").textContent = data.director || "";
+      document.getElementById("filmCast").textContent = data.cast || "";
+      document.getElementById("filmSound").textContent = data.sound || "";
+      document.getElementById("filmDuration").textContent = data.duration || "";
+      document.getElementById("filmAge").textContent = data.age || "";
+      document.getElementById("filmImdb").textContent = data.imdb || "";
+      document.getElementById("filmDescription").textContent = data.description || "";
+      document.getElementById("filmPlayer").src = data.stream_url || "";
     }
 
-    if (!data) {
-      document.getElementById("filmTitle").textContent = "Фільм не знайдено";
-      return;
+    function scrollSlider(direction) {
+      const slider = document.getElementById("sliderRow");
+      const scrollAmount = 300;
+      slider.scrollBy({ left: scrollAmount * direction, behavior: "smooth" });
     }
 
-    console.log("🎬 Дані фільму:", data);
-
-    document.getElementById("filmPoster").src = data.poster || "";
-    document.getElementById("filmTitle").textContent = data.title || "";
-    document.getElementById("filmDesc").textContent = data.description || "Опис відсутній";
-    document.getElementById("filmYear").textContent = data.year || "";
-    document.getElementById("filmGenre").textContent = data.genre || "";
-    document.getElementById("filmCountry").textContent = data.country || "";
-    document.getElementById("filmDirector").textContent = data.director || "";
-    document.getElementById("filmCast").textContent = data.cast || "";
-    document.getElementById("filmSound").textContent = data.sound || "";
-    document.getElementById("filmDuration").textContent = data.duration || "";
-    document.getElementById("filmAge").textContent = data.age || "";
-    document.getElementById("filmImdb").textContent = data.imdb || "—";
-
-
-    const player = document.getElementById("filmPlayer");
-    player.src = data.stream_url || "";
-  }
-
-  loadFilm();
-</script>
-<script>
-  function scrollSlider(direction) {
-    const slider = document.getElementById("sliderRow");
-    const scrollAmount = 300;
-    slider.scrollBy({ left: scrollAmount * direction, behavior: "smooth" });
-  }
-</script>
-
-
+    loadFilm();
+  </script>
 </body>
 </html>
