--- a/film.html
+++ b/film.html
@@ -187,7 +187,8 @@
       <div class="film-right">
         <div class="film-title" id="filmTitle">Назва фільму</div>
         <div class="player-box">
-          <video id="filmPlayer" controls playsinline muted></video>
+          <video id="filmPlayer" controls autoplay playsinline muted></video>
+
         </div>
         <div class="film-description">
           <h3>Про що фільм:</h3>
